# movement-analysis-poc

./: .gitignore  CLAUDE.md  IDEAS.md  pyproject.toml
footage/: manifest.csv
footage/exp02/: anchors.json  calibration.json  registration_points.json  takes.csv
lab/: CONCEPTS.md  DECISIONS.md  download_models.py  exp01_pose_quality.py  exp02_noise_floor.py  exp03_registration.py  extract_pose_mediapipe.py  extract_pose_vitpose.py  metrics.py  pick_anchors.py  pick_points.py  pick_registration_points.py  pose_schema.py  render_overlay.py  test_metrics.py
lab/results/exp01-pose-quality/: model_comparison.csv  summary.csv  summary.md
lab/results/exp02-noise-floor/: README.md  findings-anchor.md  findings-hold-anchor.md  movement_noise.csv  noise_floor.csv  summary.md  takes_summary.csv
lab/results/exp02-noise-floor/run1-ankle-anchor/: README.md  noise_floor.csv  summary.md
lab/results/exp02-noise-floor/run2-toprow-anchor/: README.md  anchors-toprow.json  movement_noise.csv  noise_floor.csv  summary.md
lab/results/exp02-noise-floor/run3-near-anchor/: README.md  movement_noise.csv  noise_floor.csv  summary.md  takes_summary.csv
lab/results/exp03-registration/: findings.md  residuals.csv  summary.md
shared-fixtures/: metrics.json
